@@ -56,12 +56,13 @@ import org.mariadb.jdbc.internal.failover.FailoverProxy;
 import org.mariadb.jdbc.internal.util.dao.QueryException;
 import org.mariadb.jdbc.internal.failover.Listener;
 import org.mariadb.jdbc.internal.failover.tools.SearchFilter;
+import org.threadly.util.Clock;
 
-import java.util.LinkedList;
+import java.util.ArrayDeque;
+import java.util.Deque;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.locks.ReentrantLock;
-
 
 public class MasterProtocol extends AbstractQueryProtocol {
 
@@ -102,7 +103,7 @@ public class MasterProtocol extends AbstractQueryProtocol {
                             SearchFilter searchFilter) throws QueryException {
 
         MasterProtocol protocol;
-        List<HostAddress> loopAddresses = new LinkedList<>(addresses);
+        Deque<HostAddress> loopAddresses = new ArrayDeque<>(addresses);
         int maxConnectionTry = listener.getRetriesAllDown();
         QueryException lastQueryException = null;
         while (!loopAddresses.isEmpty() || (!searchFilter.isUniqueLoop() && maxConnectionTry > 0)) {
@@ -114,8 +115,7 @@ public class MasterProtocol extends AbstractQueryProtocol {
             maxConnectionTry--;
 
             try {
-                protocol.setHostAddress(loopAddresses.get(0));
-                loopAddresses.remove(0);
+                protocol.setHostAddress(loopAddresses.removeFirst());
 
                 protocol.connect();
                 if (listener.isExplicitClosed()) {
@@ -127,12 +127,12 @@ public class MasterProtocol extends AbstractQueryProtocol {
                 return;
 
             } catch (QueryException e) {
-                blacklist.put(protocol.getHostAddress(), System.currentTimeMillis());
+                blacklist.put(protocol.getHostAddress(), Clock.accurateForwardProgressingMillis());
                 lastQueryException = e;
             }
 
             if (loopAddresses.isEmpty() && !searchFilter.isUniqueLoop() && maxConnectionTry > 0) {
-                loopAddresses = new LinkedList<>(addresses);
+                loopAddresses = new ArrayDeque<>(addresses);
             }
         }
         if (lastQueryException != null) {
