@@ -55,8 +55,10 @@ import org.mariadb.jdbc.internal.failover.FailoverProxy;
 import org.mariadb.jdbc.internal.failover.impl.MastersSlavesListener;
 import org.mariadb.jdbc.internal.failover.tools.SearchFilter;
 import org.mariadb.jdbc.internal.util.dao.QueryException;
+import org.threadly.util.Clock;
 
-import java.util.LinkedList;
+import java.util.ArrayDeque;
+import java.util.Deque;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.locks.ReentrantLock;
@@ -69,7 +71,6 @@ public class MastersSlavesProtocol extends MasterProtocol {
         super(url, lock);
     }
 
-
     /**
      * loop until found the failed connection.
      *
@@ -81,9 +82,8 @@ public class MastersSlavesProtocol extends MasterProtocol {
      */
     public static void loop(MastersSlavesListener listener, final List<HostAddress> addresses,
                             Map<HostAddress, Long> blacklist, SearchFilter searchFilter) throws QueryException {
-
         MastersSlavesProtocol protocol;
-        List<HostAddress> loopAddresses = new LinkedList<>(addresses);
+        Deque<HostAddress> loopAddresses = new ArrayDeque<>(addresses);
         int maxConnectionTry = listener.getRetriesAllDown();
         QueryException lastQueryException = null;
 
@@ -96,8 +96,7 @@ public class MastersSlavesProtocol extends MasterProtocol {
             maxConnectionTry--;
 
             try {
-                protocol.setHostAddress(loopAddresses.get(0));
-                loopAddresses.remove(0);
+                protocol.setHostAddress(loopAddresses.removeFirst());
 
 //                if (log.isDebugEnabled()) log.debug("trying to connect to " + protocol.getHostAddress());
 
@@ -123,7 +122,7 @@ public class MastersSlavesProtocol extends MasterProtocol {
 
             } catch (QueryException e) {
                 lastQueryException = e;
-                blacklist.put(protocol.getHostAddress(), System.currentTimeMillis());
+                blacklist.put(protocol.getHostAddress(), Clock.accurateForwardProgressingMillis());
             }
 
             if (!searchFilter.isSearchForMaster() && !searchFilter.isSearchForSlave()) {
@@ -132,7 +131,7 @@ public class MastersSlavesProtocol extends MasterProtocol {
 
             //loop is set so
             if (loopAddresses.isEmpty() && !searchFilter.isUniqueLoop() && maxConnectionTry > 0) {
-                loopAddresses = new LinkedList<>(addresses);
+                loopAddresses = new ArrayDeque<>(addresses);
                 listener.checkMasterStatus(searchFilter);
             }
 
@@ -199,6 +198,7 @@ public class MastersSlavesProtocol extends MasterProtocol {
         return newProtocol;
     }
 
+    @Override
     public boolean mustBeMasterConnection() {
         return mustBeMasterConnection;
     }
